# ASTC_implementation

./: .gitignore  CMakeLists.txt  README.md  embed.py  shell_template.html
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake  webgpu_astc.data  webgpu_astc.html  webgpu_astc.js  webgpu_astc.wasm
build-web/webgpu/: Makefile
build-web2/: CMakeCache.txt  Makefile  cmake_install.cmake  webgpu_astc.data  webgpu_astc.html  webgpu_astc.js  webgpu_astc.wasm
build-web2/webgpu/: Makefile  cmake_install.cmake
code/: astc.h  astc_store.cpp  astc_store.h  averages_and_directions.cpp  averages_and_directions.h  best_partitionings.cpp  compression_pipeline.cpp  main.cpp  metadata_structures.cpp  partition_tables.cpp  physical_compression.cpp  shaders_init.cpp  webgpu_utils.cpp  webgpu_utils.h
shaders/: pass001_init_kmeans.wgsl  pass002_assign_kmeans.wgsl  pass003_update_kmeans.wgsl  pass004_count_partition_mismatch.wgsl  pass005_partition_ordering.wgsl  pass006_evaluate_partition_candidates.wgsl  pass007_prepare_partitioned_blocks.wgsl  pass01_ideal_endpoints_and_weights.wgsl  pass02_decimated_weights.wgsl  pass03_compute_angular_offsets.wgsl  pass04_lowest_and_highest_weight.wgsl  pass05_best_values_for_quant_levels.wgsl  pass06_remap_low_and_high_values.wgsl  pass07_weights_and_error_for_bm.wgsl  pass08_compute_encoding_choice_errors.wgsl  pass09_compute_color_error.wgsl  pass10_color_combinations_for_quant_2part.wgsl  pass10_color_combinations_for_quant_3part.wgsl  pass10_color_combinations_for_quant_4part.wgsl  pass11_best_color_combination_for_mode_1part.wgsl  pass11_best_color_combination_for_mode_2part.wgsl  pass11_best_color_combination_for_mode_3part.wgsl  pass11_best_color_combination_for_mode_4part.wgsl  pass12_find_top_N_candidates.wgsl  pass13_recompute_ideal_endpoints.wgsl  pass14_pack_color_endpoints.wgsl  pass15_unpack_color_endpoints.wgsl  pass16_realign_weights.wgsl  pass17_compute_final_error.wgsl  pass18_pick_best_candidate.wgsl  pass1_ideal_endpoints_and_weights.wgsl  pass2_decimated_weights.wgsl  pass3_compute_angular_offsets.wgsl  pass4_lowest_and_highest_weight.wgsl  pass5_best_values_for_quant_levels.wgsl  pass6_remap_low_and_high_values.wgsl  pass7_weights_and_error_for_bm.wgsl  pass8_compute_encoding_choice_errors.wgsl  pass9_compute_color_error.wgsl
test_images/: imageOut.astc  imageOut_vs.astc
